<resources>
    <string name="app_name">Ruler</string>
    <string name="title_activity_ruler">RulerActivity</string>

    <!-- 拍摄按钮下的state TextView的状态文字-->
    <string name="tx_dis_init">Get Distance</string>
    <string name="tx_dis_gotD">Retry</string>
    <string name="tx_dis_start_calH">Get Height</string>
    <string name="tx_dis_gotH">Restart</string>

    <string name="tx_distance">Distance(m)</string>
    <string name="tx_height">Height(m)</string>

    <string name="init_distance">0.00</string>
    <string name="init_height">0.00</string>
    <string name="init_config">h:\nH:\nH+h:</string>

    <!--Menu 里的String-->
    <string name="menu_capture">Capture</string>
    <string name="menu_setting">设置高度</string>
    <string name="menu_modify_mis">修改基线</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_height">测量高度</string>
    <string name="menu_width">测量宽度</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
