<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >


    </FrameLayout>

    <!--添加中心十字准星-->
    <!--android:layout_gravity="center" -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/cross_measure"
        android:layout_gravity="center"

        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="#303F9F"
        android:id="@+id/id_tx_capture_state"
        android:textAlignment="center"
        android:text="@string/tx_dis_init"
        android:layout_alignEnd="@+id/button_capture"
        android:layout_alignStart="@+id/button_capture" />

    <ImageButton
        android:id="@+id/button_capture"
        android:background="@mipmap/measure_shutter1"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:padding="0dp"
        android:layout_above="@id/id_tx_capture_state"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/id_distance"
        android:text="@string/init_distance"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_above="@id/button_capture"
        android:textAlignment="center"
        android:paddingLeft="0dp"
        android:textColor="#0cc"
        android:layout_marginRight="30dp"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:layout_alignEnd="@+id/textView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/tx_distance"
        android:textColor="#0cc"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_above="@id/id_distance"
        android:layout_marginRight="20dp"
        android:id="@+id/textView" />


    <TextView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:id="@+id/id_tx_config"
        android:text="@string/init_config"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#cfc"
        android:layout_alignParentBottom="true"
        />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@id/id_tx_config"
        android:id="@+id/id_btn_totalH"
        android:background="@mipmap/button_height"
        android:visibility="invisible"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_above="@id/id_tx_config"
        android:id="@+id/id_txt_height"
        android:textColor="#0cc"
        android:textSize="30dp"
        android:text="@string/init_distance"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/id_txt_height"
        android:textColor="#0cc"
        android:textSize="30dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/tx_height"
        />

</RelativeLayout>
